# STOR609-CW3

./: .gitignore  LICENSE  figure_three_roll_hold_boundary.py  piglet_exp.py  pyproject.toml  requirements.txt  value_iteration.py
code/: boundary_plot.py  pig_value_iteration.py  piglet.py  plot_reachable_states_3d.py  reachable_states.py  roll_hold_boundary_plot.py
implementation/: figure7_win_probability_contours.py  figures5-6_reachable_states.py  map_reachable_states.py  piglet.py  reachable_states.npy  reachable_states_roll_optimal.npy
implementation/figures_code/: figures5-6_reachable_states.py
notebooks/: Figure_2_Replication.ipynb  Figure_3_replication.ipynb  Figure_4_replication.ipynb  Figure_5_6_replication.ipynb  Figure_7_replication.ipynb  Pig_Value_Iteration.ipynb  Piglet.ipynb  Reachable_States.ipynb
notebooks/.ipynb_checkpoints/: Figure_2_replication-checkpoint.ipynb  Figure_3_replication-checkpoint.ipynb  Figure_4_replication-checkpoint.ipynb  Figure_7_replication-checkpoint.ipynb
tests/: test_pig.py  test_piglet.py
